manifests/platform/airflow/network-policy/egress-to-kube-dns.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: airflow-to-kube-dns-access
  namespace: airflow
  annotations:
    kubernetes.io/description: network policy allowing airflow to access kube-dns for dns resolution
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: airflow
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
